// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`multipleSelectionFileTable component renders the component unchanged (snapshot) 1`] = `
<div>
  <div
    class="flex flex-col w-full h-full gap-4"
  >
    <input
      class="flex h-9 w-full rounded-md border border-cn-input bg-transparent px-3 py-1 text-base shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
      multiple=""
      type="file"
    />
    <div
      aria-required="false"
      class="grid gap-2"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="-1"
    >
      <div
        class="flex flex-col gap-5 w-min"
      >
        <input
          class="flex h-9 w-full rounded-md border border-cn-input bg-transparent px-3 py-1 text-base shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm max-w-sm"
          placeholder="Search ..."
          value=""
        />
        <div
          class="rounded-md border"
        >
          <div
            class="relative w-full overflow-auto"
          >
            <table
              class="w-full caption-bottom text-sm"
            >
              <thead
                class="[&_tr]:border-b"
              >
                <tr
                  class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
                >
                  <th
                    class="h-10 px-2 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      aria-checked="mixed"
                      aria-label="Select all"
                      class="peer h-4 w-4 shrink-0 rounded-sm border border-cn-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-cn-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-cn-primary data-[state=checked]:text-cn-primary-foreground"
                      data-state="indeterminate"
                      role="checkbox"
                      type="button"
                      value="on"
                    >
                      <span
                        class="flex items-center justify-center text-current"
                        data-state="indeterminate"
                        style="pointer-events: none;"
                      >
                        <svg
                          class="lucide lucide-check h-4 w-4"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <div
                      class="text-right"
                    >
                      Filename
                    </div>
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                </tr>
              </thead>
              <tbody
                class="[&_tr:last-child]:border-0"
              >
                <tr
                  class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
                  data-state="selected"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      aria-checked="true"
                      aria-label="Select row"
                      class="peer h-4 w-4 shrink-0 rounded-sm border border-cn-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-cn-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-cn-primary data-[state=checked]:text-cn-primary-foreground"
                      data-state="checked"
                      role="checkbox"
                      type="button"
                      value="on"
                    >
                      <span
                        class="flex items-center justify-center text-current"
                        data-state="checked"
                        style="pointer-events: none;"
                      >
                        <svg
                          class="lucide lucide-check h-4 w-4"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </button>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <div
                      class="text-right font-medium whitespace-normal break-words"
                    >
                      test-file.txt
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-cn-primary underline-offset-4 hover:underline h-8 rounded-md px-3 text-xs"
                    >
                      <svg
                        class="lucide lucide-trash2 lucide-trash-2"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                        />
                        <path
                          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                        />
                        <line
                          x1="10"
                          x2="10"
                          y1="11"
                          y2="17"
                        />
                        <line
                          x1="14"
                          x2="14"
                          y1="11"
                          y2="17"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
                  data-state="selected"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      aria-checked="true"
                      aria-label="Select row"
                      class="peer h-4 w-4 shrink-0 rounded-sm border border-cn-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-cn-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-cn-primary data-[state=checked]:text-cn-primary-foreground"
                      data-state="checked"
                      role="checkbox"
                      type="button"
                      value="on"
                    >
                      <span
                        class="flex items-center justify-center text-current"
                        data-state="checked"
                        style="pointer-events: none;"
                      >
                        <svg
                          class="lucide lucide-check h-4 w-4"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </button>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <div
                      class="text-right font-medium whitespace-normal break-words"
                    >
                      another-file.png
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-cn-primary underline-offset-4 hover:underline h-8 rounded-md px-3 text-xs"
                    >
                      <svg
                        class="lucide lucide-trash2 lucide-trash-2"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                        />
                        <path
                          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                        />
                        <line
                          x1="10"
                          x2="10"
                          y1="11"
                          y2="17"
                        />
                        <line
                          x1="14"
                          x2="14"
                          y1="11"
                          y2="17"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
                  data-state="false"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      aria-checked="false"
                      aria-label="Select row"
                      class="peer h-4 w-4 shrink-0 rounded-sm border border-cn-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-cn-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-cn-primary data-[state=checked]:text-cn-primary-foreground"
                      data-state="unchecked"
                      role="checkbox"
                      type="button"
                      value="on"
                    />
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <div
                      class="text-right font-medium whitespace-normal break-words"
                    >
                      document.pdf
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-cn-primary underline-offset-4 hover:underline h-8 rounded-md px-3 text-xs"
                    >
                      <svg
                        class="lucide lucide-trash2 lucide-trash-2"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                        />
                        <path
                          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                        />
                        <line
                          x1="10"
                          x2="10"
                          y1="11"
                          y2="17"
                        />
                        <line
                          x1="14"
                          x2="14"
                          y1="11"
                          y2="17"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="flex items-center justify-end space-x-2 py-4"
        >
          <div
            class="flex-1 text-sm text-muted-foreground"
          >
            2
             of
             
            3
             row(s) selected.
          </div>
          <div
            class="space-x-2"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-cn-input bg-cn-background text-cn-foreground shadow-sm hover:bg-cn-accent hover:text-cn-accent-foreground h-8 rounded-md px-3 text-xs"
              disabled=""
            >
              Previous
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-cn-input bg-cn-background text-cn-foreground shadow-sm hover:bg-cn-accent hover:text-cn-accent-foreground h-8 rounded-md px-3 text-xs"
              disabled=""
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`singleSelectionFileTable component renders the component unchanged (snapshot) 1`] = `
<div>
  <div
    class="flex flex-col w-full h-full gap-4"
  >
    <input
      class="flex h-9 w-full rounded-md border border-cn-input bg-transparent px-3 py-1 text-base shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
      multiple=""
      type="file"
    />
    <div
      aria-required="false"
      class="grid gap-2"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <div
        class="flex flex-col gap-5 w-min"
      >
        <input
          class="flex h-9 w-full rounded-md border border-cn-input bg-transparent px-3 py-1 text-base shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm max-w-sm"
          placeholder="Search ..."
          value=""
        />
        <div
          class="rounded-md border"
        >
          <div
            class="relative w-full overflow-auto"
          >
            <table
              class="w-full caption-bottom text-sm"
            >
              <thead
                class="[&_tr]:border-b"
              >
                <tr
                  class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
                >
                  <th
                    class="h-10 px-2 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                  <th
                    class="h-10 px-2 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <div
                      class="text-right"
                    >
                      Filename
                    </div>
                  </th>
                  <th
                    class="h-10 px-2 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  />
                </tr>
              </thead>
              <tbody
                class="[&_tr:last-child]:border-0"
              >
                <tr
                  class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
                  data-state="selected"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      aria-checked="true"
                      class="aspect-square h-4 w-4 rounded-full border border-cn-primary text-cn-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
                      data-radix-collection-item=""
                      data-state="checked"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="0"
                    >
                      <span
                        class="flex items-center justify-center"
                        data-state="checked"
                      >
                        <svg
                          class="lucide lucide-circle h-3.5 w-3.5 fill-cn-primary"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="12"
                            r="10"
                          />
                        </svg>
                      </span>
                    </button>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <div
                      class="text-right font-medium whitespace-normal break-words"
                    >
                      test-file.txt
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-cn-primary underline-offset-4 hover:underline h-8 rounded-md px-3 text-xs"
                    >
                      <svg
                        class="lucide lucide-trash2 lucide-trash-2"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                        />
                        <path
                          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                        />
                        <line
                          x1="10"
                          x2="10"
                          y1="11"
                          y2="17"
                        />
                        <line
                          x1="14"
                          x2="14"
                          y1="11"
                          y2="17"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
                  data-state="false"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      aria-checked="false"
                      class="aspect-square h-4 w-4 rounded-full border border-cn-primary text-cn-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
                      data-radix-collection-item=""
                      data-state="unchecked"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="1"
                    />
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <div
                      class="text-right font-medium whitespace-normal break-words"
                    >
                      another-file.png
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-cn-primary underline-offset-4 hover:underline h-8 rounded-md px-3 text-xs"
                    >
                      <svg
                        class="lucide lucide-trash2 lucide-trash-2"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                        />
                        <path
                          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                        />
                        <line
                          x1="10"
                          x2="10"
                          y1="11"
                          y2="17"
                        />
                        <line
                          x1="14"
                          x2="14"
                          y1="11"
                          y2="17"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
                  data-state="false"
                >
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      aria-checked="false"
                      class="aspect-square h-4 w-4 rounded-full border border-cn-primary text-cn-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
                      data-radix-collection-item=""
                      data-state="unchecked"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="2"
                    />
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <div
                      class="text-right font-medium whitespace-normal break-words"
                    >
                      document.pdf
                    </div>
                  </td>
                  <td
                    class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-cn-primary underline-offset-4 hover:underline h-8 rounded-md px-3 text-xs"
                    >
                      <svg
                        class="lucide lucide-trash2 lucide-trash-2"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                        />
                        <path
                          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                        />
                        <line
                          x1="10"
                          x2="10"
                          y1="11"
                          y2="17"
                        />
                        <line
                          x1="14"
                          x2="14"
                          y1="11"
                          y2="17"
                        />
                      </svg>
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="flex items-center justify-end space-x-2 py-4"
        >
          <div
            class="flex-1 text-sm text-muted-foreground"
          >
            1
             of
             
            3
             row(s) selected.
          </div>
          <div
            class="space-x-2"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-cn-input bg-cn-background text-cn-foreground shadow-sm hover:bg-cn-accent hover:text-cn-accent-foreground h-8 rounded-md px-3 text-xs"
              disabled=""
            >
              Previous
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-cn-input bg-cn-background text-cn-foreground shadow-sm hover:bg-cn-accent hover:text-cn-accent-foreground h-8 rounded-md px-3 text-xs"
              disabled=""
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
